--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,5 @@
 {
   "rules": {
-    "react/no-unescaped-entities": "off",
-    "jsx-a11y/alt-text": "warn"
+    "react/no-unescaped-entities": "off"
   }
 }
